product catelog basic structure added.